--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,15 @@ body {
 #editArea {
 	padding: 10px;
 	font-size: 14px;
+	margin-top: 10px;
+}
+
+.button {
+	font-size: 14px;
+	background-color: #fff;
+	color: #000;
+	padding: 5px;
+	display: inline-block;
 }
 
 
