--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
 body {
-
+	background-color: 
+	font-family: , "Helvetica Neue", sans-serif;
 }
 
-.mode {
+
+
+
+
+
+
+/*.mode {
 	box-sizing: border-box;
 	background-color: #ccc;
 	width: 500px;
@@ -39,7 +46,7 @@ body {
 	color: #000;
 	padding: 5px;
 	display: inline-block;
-}
+}*/
 
 
 
