--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body {
 	color: #fff; 
 }
 
+
 #delete_box {
 	width: 200px;
 	height: 100px;
@@ -91,6 +92,13 @@ body {
 	bottom: 50%;
 	left: 70%;
 	color: #fff;
+}
+
+.line {
+	width: 10px;
+	background-color: black;
+	border: 10px solid black;
+	height: 10px;
 }
 
 #content {
