jsPlumb things, changes to side bar icons, miscellaneous trivial changes from last last week's hack session

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@ body {
 }
 
 #canvas {
-	
-	background-color:blue;
 	position: fixed;
 	bottom: 0;
 }
@@ -67,6 +65,10 @@ body {
 	/*top: 50px;
 	left:50px;*/
 }
+
+/*.rectangle:hover {
+	background-color: blue;
+}*/
 
 .box_text {
 	width: 100%;
